# eth-rlp-verify

./: .env  Cargo.toml  LICENSE  README.md  debug.txt
.github/workflows/: main.yml
crates/eth-rlp-types/: Cargo.toml
crates/eth-rlp-types/src/: lib.rs
crates/eth-rlp-verify/: Cargo.toml
crates/eth-rlp-verify/src/: lib.rs  test_helpers.rs  traits.rs
crates/eth-rlp-verify/src/eras/: dencun.rs  genesis.rs  london.rs  mod.rs  paris.rs  shapella.rs
examples/: london.rs  paris.rs  shapella.rs
src/: block_header.rs  constants.rs  lib.rs  main.rs  rpc_client.rs  test_helpers.rs
src/eras/: dencun.rs  genesis.rs  genesis_to_london.rs  london.rs  london_to_paris.rs  mod.rs  paris.rs  paris_to_shanghai.rs  shanghai_to_cancun.rs  shapella.rs
