[package]
name = "eth-rlp-verify"
version = "0.1.0"
authors = ["Alex Meteli alex-metelli@gmx.com>"]
edition = "2021"
description = "Ethereum block header verification across multiple eras using RLP encoding and Keccak256 hashing."
license = "MIT"
repository = "https://github.com/ametel01/eth-rlp-verify"
keywords = ["ethereum",  "rlp", "keccak256", "blockchain", "verification"]
categories = ["cryptography", "encoding", "data-structures"]
readme = "README.md"                                                                                              # Ensure you have a README.md file

[dependencies]
rlp = "0.6"
ethereum-types = "0.15"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
tracing = "0.1"
eyre = "0.6"


[lib]
name = "eth_rlp_verify"
path = "src/lib.rs"
