[workspace]
members = ["crates/eth-rlp-types", "crates/eth-rlp-verify"]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Alex Meteli alex-metelli@gmx.com>"]
edition = "2021"
description = "Ethereum block header verification across multiple eras using RLP encoding and Keccak256 hashing."
license = "MIT"
repository = "https://github.com/ametel01/eth-rlp-verify"
keywords = ["ethereum", "rlp", "keccak256", "blockchain", "verification"]
categories = ["cryptography", "encoding", "data-structures"]
readme = "README.md"

[workspace.dependencies]
rlp = "0.6"
primitive-types = { version = "0.13.1", default-features = false }

[workspace.lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"
unwrap_used = "warn"
expect_used = "warn"
