[package]
name = "eth-rlp-types"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "eth_rlp_types"
crate-type = ["lib"]

[dependencies]
rlp = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
ethereum-types = "0.15"
thiserror = "2.0"
sha3 = "0.10"
hex = "0.4"
fixed-hash = "0.8"
uint = "0.10"

[lints]
workspace = true
