[package]
name = "eth-rlp-verify"
version = { workspace = true }
edition = { workspace = true } # Ensure you have a README.md file

[dependencies]
eth-rlp-types = { path = "../eth-rlp-types" }

rlp = { workspace = true }
primitive-types = { workspace = true }

hex = "0.4"


[lib]
name = "eth_rlp_verify"
path = "src/lib.rs"

[lints]
workspace = true
